compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromRelease/output.txt
warning: language version 1.3 is experimental, there are no backwards compatibility guarantees for new language and library features
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromRelease/release.kt:5:5: error: using 'dummy(): Unit' is an error. experimental coroutine
    dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromRelease/release.kt:7:9: error: using 'dummy(): String' is an error. experimental coroutine
    C().dummy()
        ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromRelease/release.kt:9:25: error: using 'dummy(): String' is an error. experimental coroutine
    WithNested.Nested().dummy()
                        ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromRelease/release.kt:11:25: error: using 'dummy(): String' is an error. experimental coroutine
    WithInner().Inner().dummy()
                        ^
COMPILATION_ERROR
